--- a/index.mat.html
+++ b/index.mat.html
@@ -54,7 +54,7 @@
         <div id="navbar_server">
             <h3>
              [
-             <a target="" href="http://service.tartaglialab.com/page/catrapid_group"><i>cat</i>RAPID home</a>
+             <a target="" href="http://service.tartaglialab.com/new_submission/signal-localization">Signal localization</a>
              -
              <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_signal-localization.html">Documentation</a>
              -
@@ -73,7 +73,7 @@
             <p>ID: 123<br />
                 User label: test2<br />
                 <a href="protein.fasta">Protein sequence</a><br />
-                <a href="rna.fasta">Transcript sequence</a><br />
+                <a href="rnaList.txt">Transcript list</a><br />
                 Generated: 2016-10-19 13:32:49.656281<br />
             </p>
         </span>
