--- a/index.mat.html
+++ b/index.mat.html
@@ -158,11 +158,10 @@
 												htmlLines += "<h2 align='center'> The protein - "+lines[i]+" pair is predicted to interact with propensity (Global Score): "+gs
 												htmlLines += "</h2><br />"
 												htmlLines += "    <div style='float:left;width:940px;'>"
-
 												htmlLines += "        <image src="+lines[i]+".binding_sites.png style='margin-bottom:10px;' class=output/></image>"
 												htmlLines += "    </div>"
 							          htmlLines += "    <div style='float:left;width:940px;'>"
-							          htmlLines += "        <h3>(<a href='"+lines[i]+".bigTable.txt'>Download the text file of the results</a>):</h3>"
+							          htmlLines += "        <h3>(<a href='"+lines[i]+".fragments.score.txt'>Download the text file of the results</a>):</h3>"
 							          htmlLines += "        <br />"
 							          htmlLines += "        <table cellpadding='0' cellspacing='0' border='0' id='"+lines[i]+"' class='sortable' style='margin-bottom:50px;'>"
 							          htmlLines += "            <thead>"
