--- a/index.mat.html
+++ b/index.mat.html
@@ -105,6 +105,7 @@
 													},
 													 error: function() {
 															 alert("error loading results")
+															 location.reload();
 													 },
 													 async:   false
 											});
@@ -120,6 +121,7 @@
 														},
 														 error: function() {
 																 alert("error loading global score")
+																 location.reload();
 														 },
 														 async:   false
 												});
@@ -132,6 +134,7 @@
 														},
 														 error: function() {
 																 alert("error loading table")
+																 location.reload();
 														 },
 														 async:   false
 												});
