--- a/index.mat.html
+++ b/index.mat.html
@@ -164,7 +164,7 @@
 												$("#results").append(htmlLines)
 
 												$(".red").css("background-color", "#FBDDDD");
-												$(".green").css("background-color", "#BCF9C8");
+												$(".white").css("background-color", "#FFFFFF");
 
 											}
 
