--- a/index.mat.html
+++ b/index.mat.html
@@ -52,17 +52,17 @@
             <h1>Signal localization</h1>
         </div>
         <div id="navbar_server">
-            <h3>
-             [
-             <a target="" href="http://service.tartaglialab.com/new_submission/signal-localization">Signal localization</a>
-             -
-             <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_signal-localization.html">Documentation</a>
-             -
-             <a target="" href="http://service.tartaglialab.com/static_files/shared/signal-localization.html">Tutorial</a>
-             -
-             <a target="" href="http://pasteur.crg.es/portal/page/portal/827A462EAB6802B3E04012AC0E01291B">Group page @ CRG</a>
-             ]
-            </h3>
+					<h3>
+					 [
+					 <a target="" href="http://service.tartaglialab.com/new_submission/omixcore">OmiXcore home</a>
+					 -
+					 <a target="" href="http://service.tartaglialab.com/static_files/shared/documentation_omixcore.html">Documentation</a>
+					 -
+					 <a target="" href="http://service.tartaglialab.com/static_files/shared/tutorial_omixcore.html">Tutorial</a>
+					 -
+					 <a target="" href="http://pasteur.crg.es/portal/page/portal/827A462EAB6802B3E04012AC0E01291B">Group page @ CRG</a>
+					 ]
+					</h3>
         </div>
     </div>
 
