--- a/index.mat.html
+++ b/index.mat.html
@@ -49,7 +49,7 @@
             <p><a href="http://service.tartaglialab.com/">Portal Home</a></p>
         </div>
         <div id="title_server">
-            <h1>Signal localization</h1>
+            <h1>OmiXcore</h1>
         </div>
         <div id="navbar_server">
 					<h3>
